tests/dataset/tpc-ds/compiler/cpp/q57.error
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:75:12: error: ‘i’ was not declared in this scope
   75 |   decltype(i.i_category) cat;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:75:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:76:12: error: ‘cc’ was not declared in this scope
   76 |   decltype(cc.cc_name) call;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:76:12: error: ‘cc’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:77:12: error: ‘d’ was not declared in this scope
   77 |   decltype(d.d_year) year;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:77:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:80:12: error: ‘cs’ was not declared in this scope
   80 |   decltype(cs) cs;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:80:12: error: ‘cs’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:81:12: error: ‘i’ was not declared in this scope
   81 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:81:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:82:12: error: ‘d’ was not declared in this scope
   82 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:82:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:83:12: error: ‘cc’ was not declared in this scope; did you mean ‘cs’?
   83 |   decltype(cc) cc;
      |            ^~
      |            cs
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:83:12: error: ‘cc’ was not declared in this scope; did you mean ‘cs’?
   83 |   decltype(cc) cc;
      |            ^~
      |            cs
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:96:38: error: ‘struct __struct6’ has no member named ‘cat’
   96 |   decltype(std::declval<__struct6>().cat) cat;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:96:38: error: ‘struct __struct6’ has no member named ‘cat’
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:97:38: error: ‘struct __struct6’ has no member named ‘call’
   97 |   decltype(std::declval<__struct6>().call) call;
      |                                      ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:97:38: error: ‘struct __struct6’ has no member named ‘call’
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:117:38: error: ‘struct __struct6’ has no member named ‘cat’
  117 |   decltype(std::declval<__struct6>().cat) i_category;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:117:38: error: ‘struct __struct6’ has no member named ‘cat’
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:118:38: error: ‘struct __struct6’ has no member named ‘sum_sales’
  118 |   decltype(std::declval<__struct6>().sum_sales) sum_sales;
      |                                      ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:118:38: error: ‘struct __struct6’ has no member named ‘sum_sales’
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:348:36: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  348 |             auto __key = Grouped{i.i_category, cc.cc_name, d.d_year};
      |                                  ~~^~~~~~~~~~
      |                                    |
      |                                    std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:352:47: error: cannot convert ‘CatalogSale’ to ‘int’ in initialization
  352 |                 __g.items.push_back(__struct6{cs, i, d, cc});
      |                                               ^~
      |                                               |
      |                                               CatalogSale
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:359:59: error: cannot convert ‘CatalogSale’ to ‘int’ in initialization
  359 |                   __key, std::vector<__struct6>{__struct6{cs, i, d, cc}}});
      |                                                           ^~
      |                                                           |
      |                                                           CatalogSale
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:359:72: error: no matching function for call to ‘std::vector<__struct6>::vector(<brace-enclosed initializer list>)’
  359 |                   __key, std::vector<__struct6>{__struct6{cs, i, d, cc}}});
      |                                                                        ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:7:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; value_type = std::vector<__struct6>::value_type; allocator_type = std::allocator<__struct6>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; allocator_type = std::allocator<__struct6>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:371:60: error: ‘struct __struct6’ has no member named ‘price’
  371 |             std::vector<decltype(std::declval<__struct6>().price)> __items;
      |                                                            ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:371:60: error: ‘struct __struct6’ has no member named ‘price’
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:371:66: error: template argument 1 is invalid
  371 |             std::vector<decltype(std::declval<__struct6>().price)> __items;
      |                                                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:371:66: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:373:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  373 |               __items.push_back(x.price);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:373:35: error: ‘struct __struct6’ has no member named ‘price’
  373 |               __items.push_back(x.price);
      |                                   ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:370:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:369:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  369 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:369:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  369 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:379:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<__struct6>’ requested
  336 |   std::vector<__struct6> grouped = ([&]() {
      |                                    ~~~~~~~~
  337 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  338 |     for (auto cs : catalog_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  339 |       for (auto i : item) {
      |       ~~~~~~~~~~~~~~~~~~~~~
  340 |         if (!((cs.item == i.i_item_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  341 |           continue;
      |           ~~~~~~~~~
  342 |         for (auto d : date_dim) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
  343 |           if (!((cs.date == d.d_date_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  344 |             continue;
      |             ~~~~~~~~~
  345 |           for (auto cc : call_center) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  346 |             if (!((cs.call == cc.cc_call_center_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |               continue;
      |               ~~~~~~~~~
  348 |             auto __key = Grouped{i.i_category, cc.cc_name, d.d_year};
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  349 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  350 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  351 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  352 |                 __g.items.push_back(__struct6{cs, i, d, cc});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  353 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  354 |                 break;
      |                 ~~~~~~
  355 |               }
      |               ~
  356 |             }
      |             ~
  357 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  358 |               __groups.push_back(__struct7{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  359 |                   __key, std::vector<__struct6>{__struct6{cs, i, d, cc}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  360 |             }
      |             ~
  361 |           }
      |           ~
  362 |         }
      |         ~
  363 |       }
      |       ~
  364 |     }
      |     ~
  365 |     std::vector<__struct8> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  366 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  367 |       __items.push_back(__struct8{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  368 |           g.key.cat, g.key.call, g.key.year, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  369 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  370 |           })(([&]() {
      |           ~~~~~~~~~~~
  371 |             std::vector<decltype(std::declval<__struct6>().price)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  372 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  373 |               __items.push_back(x.price);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  374 |             }
      |             ~
  375 |             return __items;
      |             ~~~~~~~~~~~~~~~
  376 |           })())});
      |           ~~~~~~~~
  377 |     }
      |     ~
  378 |     return __items;
      |     ~~~~~~~~~~~~~~~
  379 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:383:32: error: ‘struct __struct6’ has no member named ‘cat’
  383 |       auto __key = AvgByYear{g.cat, g.call};
      |                                ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:383:39: error: ‘struct __struct6’ has no member named ‘call’
  383 |       auto __key = AvgByYear{g.cat, g.call};
      |                                       ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:401:60: error: ‘struct __struct6’ has no member named ‘sum_sales’
  401 |             std::vector<decltype(std::declval<__struct6>().sum_sales)> __items;
      |                                                            ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:401:60: error: ‘struct __struct6’ has no member named ‘sum_sales’
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:401:70: error: template argument 1 is invalid
  401 |             std::vector<decltype(std::declval<__struct6>().sum_sales)> __items;
      |                                                                      ^
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:401:70: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:403:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  403 |               __items.push_back(x.sum_sales);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:403:35: error: ‘struct __struct6’ has no member named ‘sum_sales’
  403 |               __items.push_back(x.sum_sales);
      |                                   ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:400:41: error: no matching function for call to ‘__avg(int)’
  400 |           gg.key.cat, gg.key.call, __avg(([&]() {
      |                                    ~~~~~^~~~~~~~~
  401 |             std::vector<decltype(std::declval<__struct6>().sum_sales)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  402 |             for (auto x : gg.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~    
  403 |               __items.push_back(x.sum_sales);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  404 |             }
      |             ~                            
  405 |             return __items;
      |             ~~~~~~~~~~~~~~~              
  406 |           })())});
      |           ~~~~~                          
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:103:30: note: candidate: ‘template<class T> double __avg(const std::vector<T>&)’
  103 | template <typename T> double __avg(const std::vector<T> &v) {
      |                              ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:103:30: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:400:41: note:   mismatched types ‘const std::vector<T>’ and ‘int’
  400 |           gg.key.cat, gg.key.call, __avg(([&]() {
      |                                    ~~~~~^~~~~~~~~
  401 |             std::vector<decltype(std::declval<__struct6>().sum_sales)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  402 |             for (auto x : gg.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~    
  403 |               __items.push_back(x.sum_sales);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  404 |             }
      |             ~                            
  405 |             return __items;
      |             ~~~~~~~~~~~~~~~              
  406 |           })())});
      |           ~~~~~                          
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:409:5: error: conversion from ‘vector<__struct11>’ to non-scalar type ‘vector<__struct6>’ requested
  380 |   std::vector<__struct6> avg_by_year = ([&]() {
      |                                        ~~~~~~~~
  381 |     std::vector<__struct10> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  382 |     for (auto g : grouped) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~
  383 |       auto __key = AvgByYear{g.cat, g.call};
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  384 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  385 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  386 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  387 |           __g.items.push_back(__struct6{g});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  388 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  389 |           break;
      |           ~~~~~~
  390 |         }
      |         ~
  391 |       }
      |       ~
  392 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  393 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  394 |             __struct10{__key, std::vector<__struct6>{__struct6{g}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  395 |       }
      |       ~
  396 |     }
      |     ~
  397 |     std::vector<__struct11> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  398 |     for (auto &gg : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  399 |       __items.push_back(__struct11{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  400 |           gg.key.cat, gg.key.call, __avg(([&]() {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  401 |             std::vector<decltype(std::declval<__struct6>().sum_sales)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  402 |             for (auto x : gg.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~
  403 |               __items.push_back(x.sum_sales);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  404 |             }
      |             ~
  405 |             return __items;
      |             ~~~~~~~~~~~~~~~
  406 |           })())});
      |           ~~~~~~~~
  407 |     }
      |     ~
  408 |     return __items;
      |     ~~~~~~~~~~~~~~~
  409 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:414:19: error: ‘struct __struct6’ has no member named ‘cat’
  414 |         if (!(((g.cat == a.cat) && (g.call == a.call))))
      |                   ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:414:28: error: ‘struct __struct6’ has no member named ‘cat’
  414 |         if (!(((g.cat == a.cat) && (g.call == a.call))))
      |                            ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:414:39: error: ‘struct __struct6’ has no member named ‘call’
  414 |         if (!(((g.cat == a.cat) && (g.call == a.call))))
      |                                       ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:414:49: error: ‘struct __struct6’ has no member named ‘call’
  414 |         if (!(((g.cat == a.cat) && (g.call == a.call))))
      |                                                 ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:416:20: error: ‘struct __struct6’ has no member named ‘year’
  416 |         if (!((((g.year == 2001) && (a.avg_sales > 0)) &&
      |                    ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:416:40: error: ‘struct __struct6’ has no member named ‘avg_sales’
  416 |         if (!((((g.year == 2001) && (a.avg_sales > 0)) &&
      |                                        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:417:25: error: ‘struct __struct6’ has no member named ‘sum_sales’
  417 |                ((abs((g.sum_sales - a.avg_sales)) / a.avg_sales) > 0.1))))
      |                         ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:417:39: error: ‘struct __struct6’ has no member named ‘avg_sales’
  417 |                ((abs((g.sum_sales - a.avg_sales)) / a.avg_sales) > 0.1))))
      |                                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:417:55: error: ‘struct __struct6’ has no member named ‘avg_sales’
  417 |                ((abs((g.sum_sales - a.avg_sales)) / a.avg_sales) > 0.1))))
      |                                                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:419:36: error: ‘struct __struct6’ has no member named ‘cat’
  419 |         __items.push_back(Result{g.cat, g.sum_sales});
      |                                    ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq572873699264/001/prog.cpp:419:43: error: ‘struct __struct6’ has no member named ‘sum_sales’
  419 |         __items.push_back(Result{g.cat, g.sum_sales});
      |                                           ^~~~~~~~~
